--- a/response2reviewer.tex
+++ b/response2reviewer.tex
@@ -314,7 +314,7 @@ Email: guowei@g.ecc.u-tokyo.ac.jp
 }
 
 \manuscript{
-    In order to train and validate SoftGroup, each berry and stem in the bunch point cloud obtained in Section~\ref{sec:212} was \added[id=R2]{individually} labeled \replaced[id=R2]{(instance-level segmentation) as shown in}{at the instance-level} Fig.~\ref{fig:raw11}.
+    In order to train and validate SoftGroup, each berry and stem in the bunch point cloud obtained in Section~\ref{sec:212} was \added[id=R2]{individually} labeled \replaced[id=R2]{(instance-level segmentation) by CloudCompare (\url{https://www.cloudcompare.org/}) as shown in}{at the instance-level} Fig.~\ref{fig:raw11}. 
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -324,15 +324,11 @@ Email: guowei@g.ecc.u-tokyo.ac.jp
 
 \response{
     We thank the reviewer for raising this important methodological detail. 
-    The 3D point clouds were labeled using CloudCompare (v2.12.4), an open-source software for 3D point cloud and mesh processing.
-}
-
-\todoblock{
-    Confirm which tool for labeling, or SoftGroup can automatically annotation?
+    The 3D point clouds were labeled using CloudCompare, an open-source software for 3D point cloud and mesh processing.
 }
 
 \manuscript{
-    
+    In order to train and validate SoftGroup, each berry and stem in the bunch point cloud obtained in Section~\ref{sec:212} was \added[id=R2]{individually} labeled \replaced[id=R2]{(instance-level segmentation) by CloudCompare (\url{https://www.cloudcompare.org/}) as shown in}{at the instance-level} Fig.~\ref{fig:raw11}. 
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
