--- a/main.tex
+++ b/main.tex
@@ -780,8 +780,7 @@ During the preparation of this work the authors used ChatGPT in order to check g
 The authors declare that they have no known competing financial interests or personal relationships that could have appeared to influence the work reported in this paper.
 
 \section*{Data availability}
-The \added[id=R1]{demo dataset, source codes} and model weight for the \replaced[id=R1]{academic}{test} usage is available \replaced[id=R1]{at}{here:} \url{https://github.com/I3-Laboratory/GrapeCPNet}. 
-The whole dataset \added[id=R1]{and codes} used in this paper is available upon request.
+The \added[id=R1]{demo dataset, source codes} and model weight \added[id=R1]{of GrapeCPNet (completion network)} for the \replaced[id=R1]{academic}{test} usage is available \replaced[id=R1]{at}{here:} \url{https://github.com/I3-Laboratory/GrapeCPNet}. 
 
 \section*{Funding}
 This study was partially supported by the National Natural Science Foundation of China (NSFC) Program 62276009 and the Japan Science and Technology Agency (JST) AIP Acceleration Research JPMJCR21U3, the Hokkaido Sarabetsu Village ``Endowed Chair for Field Phenomics'' project.
